# django-developmentEmailDashboard

./: MANIFEST.in  pyproject.toml  readme.md  setup.cfg
developmentEmailDashboard/: admin.py  apps.py  emailbackend.py  models.py  signals.py  tests.py  urls.py  views.py
developmentEmailDashboard/migrations/: 0001_initial.py  0002_developmentemail_email_type.py
developmentEmailDashboard/templates/developmentEmailDashboard/: base.html  emailView.html  inboxView.html  inboxesView.html  sidebar.html  sidebarEmailPreview.html
